# sonic-ocs-libs

./: .gitignore  README.md
sai/: CMakeLists.txt  README.md
sai/inc/: logger.h  sai_adapter.h  sai_adapter_interface.h  sai_meta_data.h  virtual_ocs_dev_mgr.h  virtual_ocs_device.h
sai/src/: logger.cpp  sai.c  sai_adapter.cpp  sai_adapter_interface.cpp  sai_meta_data.cpp  sai_ocs_cross_connect.cpp  sai_ocs_cross_connect_factory_data.cpp  sai_ocs_port.cpp  sai_router_if.cpp  sai_switch.cpp  virtual_ocs_dev_mgr.cpp  virtual_ocs_device.cpp
sai/test/: test.cpp
